--- a/WEEK7 LAB SCRAPPING.ipynb
+++ b/WEEK7 LAB SCRAPPING.ipynb
@@ -10,58 +10,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "18d606a2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████| 100/100 [00:10<00:00,  9.76it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Importing libraries\n",
     "import requests\n",
-    "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
-    "from tqdm import tqdm\n",
-    "from random import randint\n",
+    "from bs4 import BeautifulSoup\n",
     "\n",
-    "# Storing URL in a variable\n",
+    "# URL of the chart\n",
     "url = \"https://www.billboard.com/charts/hot-100\"\n",
     "\n",
-    "# Sending a GET request to the URL\n",
+    "# Send GET request to the URL\n",
     "response = requests.get(url)\n",
     "\n",
-    "# Checking the response status code to make sure it's successful\n",
+    "# Check if the response is successful\n",
     "if response.status_code == 200:\n",
-    "    # Parsing the content of the URL\n",
+    "    # Use BeautifulSoup to parse the HTML content\n",
     "    soup = BeautifulSoup(response.content, 'html.parser')\n",
     "else:\n",
-    "    # If request was unsuccessful, print an error message\n",
-    "    print(\"Failed to retrieve page content. Response status code: \", response.status_code)\n",
+    "    # If the response is not successful, raise an error\n",
+    "    raise Exception(\"Failed to retrieve page content. Response status code: {}\".format(response.status_code))\n",
     "\n",
-    "# Initializing empty lists to store the song titles and artists\n",
-    "songs = []\n",
-    "artists = []\n",
+    "# Get the song titles and artists\n",
+    "song_titles = [element.get_text(strip=True) for element in soup.select('h3.c-title.a-no-trucate')[:100]]\n",
+    "artists = [element.get_text(strip=True) for element in soup.select('span.c-label.a-font-primary-s')[:100]]\n",
     "\n",
-    "# Using a for loop to loop through all 100 songs on the chart\n",
-    "for i in tqdm(range(100)):\n",
-    "    # Selecting the i-th song title from the soup and appending it to the songs list\n",
-    "    songs.append(soup.select('h3.c-title.a-no-trucate')[i].get_text(strip=True))\n",
-    "    # Selecting the i-th artist from the soup and appending it to the artists list\n",
-    "    artists.append(soup.select('span.c-label.a-font-primary-s')[i].get_text(strip=True))\n",
-    "\n",
-    "# Creating a pandas DataFrame from the songs and artists lists, with columns named \"song\" and \"artist\" respectively\n",
-    "songs = pd.DataFrame({'song':songs,'artist':artists})\n"
+    "# Create a Pandas DataFrame from the song titles and artists\n",
+    "songs = pd.DataFrame({'song':song_titles, 'artist':artists})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "a6573aaa",
    "metadata": {},
    "outputs": [],
@@ -72,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "2af99b16",
    "metadata": {},
    "outputs": [
@@ -191,7 +173,7 @@
        "[100 rows x 3 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,21 +192,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "e9f845a2",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "what song do you like?  anti hero\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "what song do you like? Spit in my face\n",
       "The song does not match, try again\n"
      ]
     }
@@ -241,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "011fc794",
    "metadata": {},
    "outputs": [
@@ -268,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "08ed3394",
    "metadata": {},
    "outputs": [
@@ -276,7 +252,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "what song do you like? anti-hero\n",
+      "what song do you like? Do it Again\n",
       "This is a hot song\n"
      ]
     }
@@ -291,8 +267,24 @@
     "    print ('This is a hot song')\n",
     "else:\n",
     "    print('This is not a hot song or does not match with the top 100, but we suggest you these other hot songs: \\n')\n",
-    "    print(songs[['Song_title','Rank']].sample(n=5, random_state=3))"
+    "    print(songs[['Song_title','Rank']].sample(n=4, random_state=3))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33d17012",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbcac54f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
